--- a/Products.html
+++ b/Products.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
-  
   <div  id="app">
     <Navber></Navber>
     <Load v-if="isLoading"></Load>
@@ -134,7 +133,7 @@
                     placeholder="請輸入分類" required>
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="price" class="mb-1">單位</label>
+                  <label for="unit" class="mb-1">單位</label>
                   <input type="unit" class="form-control" id="unit" v-model="tempProduct.unit"
                     placeholder="請輸入單位" required>
                 </div>
@@ -236,7 +235,7 @@
           @click.prevent="changePage(item)"
         >{{ item }}</a>
       </li>
-      <li          
+      <li
         class="page-item"
         :class="{'disabled': pages.current_page === pages.total_pages}"
       >
